# mintcarbon-backend

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: config.rs  lib.rs  main.rs
api/src/db/: mod.rs  models.rs
api/src/middleware/: auth.rs  rbac.rs
api/src/routes/: auth.rs  compliance.rs  kyc.rs  marketplace.rs  mod.rs  portfolio.rs  projects.rs  tokens.rs
api/src/soroban/: mod.rs
compliance/: Cargo.toml
compliance/src/: lib.rs
indexer/: Cargo.toml
indexer/src/: main.rs
kyc/: Cargo.toml
kyc/src/: document_store.rs  lib.rs  mock.rs  provider.rs  sanctions.rs
migrations/: 001_create_users.sql  002_create_projects.sql  003_create_token_holdings.sql  004_create_listings.sql  005_create_orders.sql  006_create_audit_events.sql  007_create_notifications.sql
notification/: Cargo.toml
notification/src/: lib.rs
oracle/: Cargo.toml
oracle/src/: lib.rs
registry/: Cargo.toml
registry/src/: adapters.rs  lib.rs  parser.rs  provider.rs
scripts/: migrate.sh  seed.sh
