[workspace]
resolver = "2"
members = [
    "api",
    "indexer",
    "kyc",
    "registry",
    "notification",
    "oracle",
    "compliance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.25", features = ["tokio-comp"] }
jsonwebtoken = "9"
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
