[package]
name = "mintcarbon-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
sqlx.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono.workspace = true
reqwest.workspace = true
