[package]
name = "kyc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
chrono.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
tracing.workspace = true
reqwest.workspace = true
